Add initial support for unpaywall downloads
- some alphabetical sorting
- refine comments
- some null markers
- some variable name tweaks